style: Fixed alignment

--- a/style.css
+++ b/style.css
@@ -36,3 +36,7 @@ nav {
 button {
   margin-top: 0.8rem;
 }
+
+.sub-grp {
+  margin-top: 0.8rem;
+}
